# inspect-robots-yam

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
plans/: 0001-yam-molmoact2-design.md  0002-rest-pose-design.md  0003-bind-task-horizon.md  0003-default-rest-pose.md  0004-default-rest-pose.md  0004-gripper-open-polarity.md  0005-gripper-open-polarity.md  0006-eef-control-interface.md  0007-agent-docs.md  0007-factory-joint-home.md  0008-gr00t-act-policy.md
scripts/: derive_eef_home.py  serve_gr00t_act.py
src/inspect_robots_yam/: CLAUDE.md  __init__.py  _i2rt.py  config.py  embodiment.py  hold_check.py  kinematics.py  operator.py  packing.py  policy.py  preflight.py
src/robolens_yam/: CLAUDE.md  __init__.py  config.py  embodiment.py  packing.py  policy.py  preflight.py
tests/: test_agent_eef_integration.py  test_api_snapshot.py  test_compat.py  test_config.py  test_dependency_pin.py  test_eef_embodiment.py  test_eef_kinematics.py  test_eef_real_kinematics.py  test_embodiment.py  test_embodiment_docs.py  test_eval_end_to_end.py  test_hold_check.py  test_i2rt.py  test_operator.py  test_packing.py  test_policy.py  test_preflight.py  test_serve_gr00t_act.py
