[build-system]
requires = ["hatchling>=1.18", "hatch-vcs>=0.3", "hatch-fancy-pypi-readme>=24.1"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots-yam"
dynamic = ["version", "readme"]
description = "Inspect Robots adapters for I2RT YAM bimanual arms driven by MolmoAct2."
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RoboCurve" }]
keywords = ["robotics", "vla", "yam", "molmoact", "bimanual", "inspect-robots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["inspect-robots>=0.3", "numpy>=1.24"]

[project.optional-dependencies]
# Real /act transport (the model runs in MolmoAct2's own server process).
client = ["requests>=2.31", "json-numpy>=2.1"]
# Real YAM arm driver — not on PyPI; resolved from git (see [tool.uv.sources]).
yam = ["i2rt"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
    "kitchenbench",
    # numpy 2.5.0's type stubs use 3.12-only syntax that mypy (python_version 3.10)
    # rejects; pin the 2.4.x line for a deterministic dev/CI gate (runtime is free).
    "numpy<2.5",
]

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots-yam"
Framework = "https://github.com/robocurve/inspect-robots"
Collection = "https://github.com/robocurve/worldevals"

# inspect_robots/kitchenbench resolve from PyPI. i2rt is GitHub-only. This is
# uv-only metadata (stripped from the published wheel), so a plain PyPI install
# cannot resolve the [yam] extra — install i2rt directly from git (see README).
# For local dev against sibling checkouts: uv pip install -e ../inspect-robots -e ../kitchenbench
[tool.uv.sources]
i2rt = { git = "https://github.com/i2rt-robotics/i2rt" }

# Inspect Robots discovers these by entry point — no import needed for `inspect-robots list`.
[project.entry-points."inspect_robots.embodiments"]
yam_arms = "inspect_robots_yam.embodiment:YAMEmbodiment"

[project.entry-points."inspect_robots.policies"]
molmoact2 = "inspect_robots_yam.policy:MolmoAct2Policy"

[project.scripts]
inspect-robots-yam-preflight = "inspect_robots_yam.preflight:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots_yam"]


# ---------------------------------------------------------------------------
# Versioning: single-source the version from git tags via hatch-vcs (the
# release workflow cuts a vX.Y.Z tag; nothing is committed to main).
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Before/without tags (e.g. shallow CI checkouts), fall back instead of failing.
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["inspect_robots_yam"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/inspect_robots_yam"]

# Hardware/client deps are lazily imported behind pragma'd seams and are not test
# deps; silence mypy's missing-import errors for them (mirrors inspect_robots' rerun override).
[[tool.mypy.overrides]]
module = ["requests.*", "json_numpy.*", "i2rt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["inspect_robots_yam"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.$",
    ": \\.\\.\\.$",
    "pragma: no cover",
]

# PyPI readme: identical to README.md except GitHub-only alert syntax
# (e.g. `> [!NOTE]`) is rewritten to bold blockquotes, which PyPI renders.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!NOTE\][ \t]*$'
replacement = '> **Note:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!TIP\][ \t]*$'
replacement = '> **Tip:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!IMPORTANT\][ \t]*$'
replacement = '> **Important:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!WARNING\][ \t]*$'
replacement = '> **Warning:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!CAUTION\][ \t]*$'
replacement = '> **Caution:**'
