[build-system]
requires = ["hatchling>=1.18", "hatch-vcs>=0.3", "hatch-fancy-pypi-readme>=24.1"]
build-backend = "hatchling.build"

[project]
name = "inspect-robots-yam"
dynamic = ["version", "readme"]
description = "Inspect Robots adapters for I2RT YAM bimanual arms driven by MolmoAct2."
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RoboCurve" }]
keywords = ["robotics", "vla", "yam", "molmoact", "bimanual", "inspect-robots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "inspect-robots>=0.12",  # EmbodimentInfo.docs (plan 0016)
    "numpy>=1.24",
    "requests>=2.31",
    "json-numpy>=2.1",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
# Deprecated aliases retained for compatibility with existing install commands.
client = ["requests>=2.31", "json-numpy>=2.1"]
cameras = ["opencv-python-headless>=4.8"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
    "kitchenbench",
    "inspect-robots-agent>=0.2.2",
    # numpy 2.5.0's type stubs use 3.12-only syntax that mypy (python_version 3.10)
    # rejects; pin the 2.4.x line for a deterministic dev/CI gate (runtime is free).
    "numpy<2.5",
]

[project.urls]
Homepage = "https://github.com/robocurve/inspect-robots-yam"
Framework = "https://github.com/robocurve/inspect-robots"
Collection = "https://github.com/robocurve/worldevals"

# Inspect Robots discovers these by entry point — no import needed for `inspect-robots list`.
[project.entry-points."inspect_robots.embodiments"]
yam_arms = "inspect_robots_yam.embodiment:YAMEmbodiment"

[project.entry-points."inspect_robots.policies"]
molmoact2 = "inspect_robots_yam.policy:MolmoAct2Policy"

[project.scripts]
inspect-robots-yam-preflight = "inspect_robots_yam.preflight:main"
inspect-robots-yam-holdcheck = "inspect_robots_yam.hold_check:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_robots_yam"]


# ---------------------------------------------------------------------------
# Versioning: single-source the version from git tags via hatch-vcs (the
# release workflow cuts a vX.Y.Z tag; nothing is committed to main).
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Before/without tags (e.g. shallow CI checkouts), fall back instead of failing.
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "D1"]
ignore = ["D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1"]

[tool.ruff.lint.isort]
known-first-party = ["inspect_robots_yam"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/inspect_robots_yam"]

# Runtime integrations are lazily imported behind seams; ignore missing type
# information from their third-party modules.
[[tool.mypy.overrides]]
module = ["requests.*", "json_numpy.*", "i2rt.*", "mink.*", "cv2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "real_kinematics: requires the optional i2rt, mink, and mujoco runtime stack",
    "perf: generous wall-clock regression check for optional real kinematics",
]

[tool.coverage.run]
branch = true
source = ["inspect_robots_yam"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.$",
    ": \\.\\.\\.$",
    "pragma: no cover",
]

# PyPI readme: identical to README.md except GitHub-only alert syntax
# (e.g. `> [!NOTE]`) is rewritten to bold blockquotes, which PyPI renders.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!NOTE\][ \t]*$'
replacement = '> **Note:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!TIP\][ \t]*$'
replacement = '> **Tip:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!IMPORTANT\][ \t]*$'
replacement = '> **Important:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!WARNING\][ \t]*$'
replacement = '> **Warning:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!CAUTION\][ \t]*$'
replacement = '> **Caution:**'
